[gd_scene load_steps=23 format=2]

[ext_resource path="res://diagetics/player/player.gd" type="Script" id=1]
[ext_resource path="res://diagetics/fx/amp_visual_effect.tscn" type="PackedScene" id=2]
[ext_resource path="res://diagetics/player/player_move_left_1.png" type="Texture" id=3]
[ext_resource path="res://diagetics/player/player_move_left_2.png" type="Texture" id=4]
[ext_resource path="res://diagetics/player/player_move_left_3.png" type="Texture" id=5]
[ext_resource path="res://diagetics/player/player_move_left_4.png" type="Texture" id=6]
[ext_resource path="res://diagetics/player/player_move_right_1.png" type="Texture" id=7]
[ext_resource path="res://diagetics/player/player_move_right_2.png" type="Texture" id=8]
[ext_resource path="res://diagetics/player/player_move_right_3.png" type="Texture" id=9]
[ext_resource path="res://diagetics/player/player_move_right_4.png" type="Texture" id=10]
[ext_resource path="res://diagetics/player/player_idle_1.png" type="Texture" id=11]
[ext_resource path="res://diagetics/player/player_idle_2.png" type="Texture" id=12]
[ext_resource path="res://diagetics/player/player_idle_3.png" type="Texture" id=13]
[ext_resource path="res://diagetics/player/player_idle_4.png" type="Texture" id=14]
[ext_resource path="res://diagetics/player/movement.gd" type="Script" id=15]
[ext_resource path="res://diagetics/player/jump.gd" type="Script" id=16]
[ext_resource path="res://diagetics/player/weapon.gd" type="Script" id=17]
[ext_resource path="res://audio/sfx/shoot.wav" type="AudioStream" id=18]
[ext_resource path="res://diagetics/player/tower_placer.gd" type="Script" id=19]
[ext_resource path="res://audio/sfx/placement.wav" type="AudioStream" id=20]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.0
height = 20.0

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "left",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "right",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
} ]

[node name="player" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 1
mode = 2
mass = 1.0
friction = 0.1
bounce = 0.0
gravity_scale = 10.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 10
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Linear" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, 10 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="amp_visual_effect" parent="." index="1" instance=ExtResource( 2 )]

[node name="sprite" type="AnimatedSprite" parent="." index="2"]

scale = Vector2( 5, 5 )
frames = SubResource( 2 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Smoothing" ]

[node name="movement" type="Node2D" parent="." index="4"]

script = ExtResource( 15 )

[node name="jump" type="Node2D" parent="." index="5"]

script = ExtResource( 16 )

[node name="weapon" type="Node2D" parent="." index="6"]

script = ExtResource( 17 )
body_path = NodePath("..")

[node name="firing_interval" type="Timer" parent="weapon" index="0"]

process_mode = 1
wait_time = 0.15
one_shot = false
autostart = false

[node name="shooting_sound" type="AudioStreamPlayer" parent="weapon" index="1"]

stream = ExtResource( 18 )
volume_db = -25.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="tower_placer" type="Node2D" parent="." index="7"]

script = ExtResource( 19 )

[node name="placement_sound" type="AudioStreamPlayer" parent="tower_placer" index="0"]

stream = ExtResource( 20 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CanvasLayer" type="CanvasLayer" parent="." index="8"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer" index="0"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 54.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse" ]

[node name="max_speed" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 46.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "fishfish"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse" ]

[node name="lin_vel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


